# lp-python-2026

./: .gitignore  README.md
tema-2/: requirements.txt
tema-3/: ejem1-tipos.py  ejem2-listas.py  ejem3-diccionarios.py  ejem4-tuplas.py  ejem5-sets.py  ejem6-flujo.py  pr1-ejer2.py
tema-4/: ejem1-function-def.py  ejem2-function-default-and-optional-params.py  ejem3-functions-as-params.py  pr2-ejer2.py
tema-5/: ejem1.py  ejem2.py  fibonacci.py  fibonacci2.py
tema-5/ejem3_packages/: app-use-A.py  app-use-B.py  app-use-matplotlib.py
tema-5/ejem3_packages/package_A/: module_x.py
tema-5/ejem3_packages/package_A/package_B/: module_y.py  module_z.py
tema-5/ejem4-packages/transcoding/audio/: ogg.py  wav.py
tema-5/ejem4-packages/transcoding/video/: h264.py  mp4.py
tema-5/ejem5-poetry/: pyproject.toml
tema-6/: ejem1-type-hints.py  ejem2-type-alias.py  ejem3-func-generadoras.py  ejem4-errores.py  ejem5-extra-arguments.py
tema-7/: lp.ipynb  pr4.ipynb
tema-8/: ejem1.py  ejem2.py  ejem3.py  ejem4.py  ejem5.py
